# h2

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  aliases.js  codecov.yml  main.js  search-index.js  settings.html  source-files.js
.ci/: coverage.sh
.github/workflows/: CI.yml
ci/: h2spec.sh
examples/: akamai.rs  client.rs  client_push.rs  server-tr.rs  server.rs  server_push.rs
fixtures/hpack/: .travis.yml  README.md  genratiotbl.py
fixtures/hpack/go-hpack/: story_00.json  story_01.json  story_02.json  story_04.json  story_05.json  story_06.json  story_07.json  story_08.json  story_09.json  story_10.json  story_11.json  story_12.json  story_13.json  story_14.json  story_15.json  story_16.json  story_17.json  story_18.json  story_19.json  story_20.json  story_21.json  story_22.json  story_23.json  story_24.json  story_25.json  story_26.json  story_27.json  story_28.json  story_29.json  story_30.json  story_31.json
fixtures/hpack/haskell-http2-linear/: story_00.json  story_01.json  story_02.json  story_04.json  story_05.json  story_06.json  story_07.json  story_08.json  story_09.json  story_10.json  story_11.json  story_12.json  story_13.json  story_14.json  story_15.json  story_16.json  story_17.json  story_18.json  story_19.json  story_20.json  story_21.json  story_22.json  story_23.json  story_24.json  story_25.json  story_26.json  story_27.json  story_28.json  story_29.json  story_30.json  story_31.json
fixtures/hpack/haskell-http2-linear-huffman/: story_00.json  story_01.json  story_02.json  story_04.json  story_05.json  story_06.json  story_07.json  story_08.json  story_09.json  story_10.json  story_11.json  story_12.json  story_13.json  story_14.json  story_15.json  story_16.json  story_17.json  story_18.json  story_19.json  story_20.json  story_21.json  story_22.json  story_23.json  story_24.json  story_25.json  story_26.json  story_27.json  story_28.json  story_29.json  story_30.json  story_31.json
fixtures/hpack/haskell-http2-naive-huffman/: story_00.json  story_01.json  story_02.json  story_03.json  story_05.json  (+26 more)
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: complete_fuzz.rs  fuzz_client.rs  fuzz_e2e.rs  fuzz_hpack.rs  hpack_fuzzer.rs
fuzz/src/: main.rs
h2/: all.html  enum.RecvError.html  enum.SendError.html  enum.UserError.html  index.html  sidebar-items.js  struct.Codec.html  struct.Error.html  struct.Reason.html  struct.RecvStream.html  struct.SendStream.html  struct.StreamId.html
h2/client/: fn.handshake.html  struct.Builder.html  struct.Connection.html  struct.PushPromise.html  struct.PushPromises.html  struct.PushedResponseFuture.html  struct.ReadySendRequest.html  struct.ResponseFuture.html  struct.SendRequest.html
h2/codec/: struct.Codec.html
h2/frame/: constant.DEFAULT_INITIAL_WINDOW_SIZE.html  constant.DEFAULT_MAX_FRAME_SIZE.html  constant.DEFAULT_SETTINGS_HEADER_TABLE_SIZE.html  constant.HEADER_LEN.html  constant.MAX_INITIAL_WINDOW_SIZE.html  constant.MAX_MAX_FRAME_SIZE.html  enum.Error.html  enum.Frame.html  enum.Kind.html  enum.PushPromiseHeaderError.html  fn.parse_u64.html  index.html  sidebar-items.js  struct.Continuation.html  struct.Data.html  struct.GoAway.html  struct.Head.html  struct.Headers.html  struct.Ping.html  struct.Priority.html  struct.Pseudo.html  struct.PushPromise.html  struct.Reason.html  struct.Reset.html  struct.Settings.html  struct.StreamDependency.html  struct.StreamId.html  struct.StreamIdOverflow.html  struct.WindowUpdate.html  type.FrameSize.html
h2/server/: fn.handshake.html  struct.Builder.html  struct.Connection.html  struct.Handshake.html  struct.SendPushedResponse.html  struct.SendResponse.html
implementors/futures_sink/: trait.Sink.js
src/: client.rs  error.rs  fuzz_bridge.rs  lib.rs  server.rs  share.rs  tracing.rs
src/codec/: error.rs  framed_read.rs  framed_write.rs  mod.rs
src/frame/: data.rs  go_away.rs  head.rs  headers.rs  mod.rs  ping.rs  priority.rs  reader.rs  reason.rs  reset.rs  settings.rs  stream_id.rs  unknown.rs  util.rs  window_update.rs  writer.rs
src/h2/: client.rs.html  error.rs.html  lib.rs.html  server.rs.html  share.rs.html
src/hpack/: decoder.rs  encoder.rs  entry.rs  header.rs  huffman.rs  huffman_table.rs  mod.rs  table.rs  test.rs
src/proto/: apply_settings.rs  codec.rs  connection.rs  control_flow.rs  control_ping.rs  control_settings.rs  control_streams.rs  error.rs  flow_control.rs  flow_control_recv.rs  flow_control_send.rs  flow_control_state.rs  flow_controller.rs  framed_read.rs  framed_write.rs  go_away.rs  handshake.rs  ifaces.rs  keep_alive.rs  mod.rs  peer.rs  ping_pong.rs  ready.rs  settings.rs  state.rs  stream_recv.rs  stream_recv_close.rs  stream_recv_open.rs  stream_send.rs  stream_send_close.rs  stream_send_open.rs  stream_state.rs  stream_states.rs  stream_store.rs  stream_tracker.rs  streams.rs  traits.rs  window_update.rs
src/util/: byte_str.rs  mod.rs
tests/: client_request.rs  codec_read.rs  codec_write.rs  flow_control.rs  ping_pong.rs  prioritization.rs  push_promise.rs  server.rs  server_preface.rs  stream_states.rs  trailers.rs
tests/h2-fuzz/: Cargo.toml
tests/h2-fuzz/src/: main.rs
tests/h2-support/: Cargo.toml  README.md
tests/h2-support/src/: assert.rs  client_ext.rs  frames.rs  future_ext.rs  lib.rs  mock.rs  mock_io.rs  mod.rs  notify.rs  prelude.rs  raw.rs  trace.rs  util.rs
tests/h2-tests/: Cargo.toml  README.md
tests/h2-tests/tests/: client_request.rs  codec_read.rs  codec_write.rs  deadlock.rs  flow_control.rs  hammer.rs  informational_responses.rs  ping_pong.rs  prioritization.rs  push_promise.rs  server.rs  stream_states.rs  trailers.rs
tests/support/: Cargo.toml  README.md  codec.rs  frames.rs  future_ext.rs  mock.rs  mod.rs  notify.rs  prelude.rs  raw.rs  util.rs
tests/support/src/: assert.rs  codec.rs  frames.rs  future_ext.rs  lib.rs  mock.rs  prelude.rs  raw.rs  util.rs
util/genfixture/: Cargo.toml
util/genhuff/: Cargo.toml
util/h2-codec/: Cargo.toml  build.rs
util/h2-codec/src/: lib.rs
util/mock-h2/: Cargo.toml
(+356 files in other folders)
