[package]
name = "h2"
version = "0.1.0" # remember to update html_root_url
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "An HTTP/2.0 client and server"
documentation = "https://docs.rs/h2"
homepage = "https://github.com/carllerche/h2"
repository = "https://github.com/carllerche/h2"
readme = "README.md"
keywords = ["http", "async", "non-blocking"]
categories = ["asynchronous", "web-programming", "network-programming"]

[badges.travis-ci]
repository = "carllerche/h2"
branch = "master"

[features]

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []

[workspace]

[dependencies]
futures = "0.1"
tokio-io = "0.1.4"
bytes = "0.4"
http = "0.1"
byteorder = "1.0"
log = "0.3.8"
fnv = "1.0.5"
slab = "0.4.0"
string = "0.1"
ordermap = "0.2"

[dev-dependencies]
tokio-timer = "0.1"

# Fuzzing
quickcheck = "0.4.1"
rand = "0.3.15"

# HPACK fixtures
hex = "0.2.0"
walkdir = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"

# Akamai example
tokio-core = "0.1"
env_logger = "0.4.3"
rustls = "0.12"
tokio-rustls = "0.5.0"
webpki = "0.18.0-alpha"
webpki-roots = "0.14"
