[package]
name = "h2"
# When releasing to crates.io:
# - Update doc URL.
#   - html_root_url.
# - Update CHANGELOG.md.
# - Create git tag
version = "0.1.26"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "An HTTP/2.0 client and server"
documentation = "https://docs.rs/h2/0.1.25/h2/"
repository = "https://github.com/hyperium/h2"
readme = "README.md"
keywords = ["http", "async", "non-blocking"]
categories = ["asynchronous", "web-programming", "network-programming"]
exclude = ["fixtures/**", "ci/**"]

[badges.travis-ci]
repository = "hyperium/h2"
branch = "master"

[features]

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []

[workspace]
members = [
    "tests/h2-fuzz",
    "tests/h2-tests",
    "tests/h2-support",
    "util/genfixture",
    "util/genhuff",
]

[dependencies]
futures = "0.1"
tokio-io = "0.1.4"
bytes = "0.4.7"
http = "0.1.8"
byteorder = "1.0"
log = "0.4.1"
fnv = "1.0.5"
slab = "0.4.0"
string = "0.2"
indexmap = "1.0"

[dev-dependencies]

# Fuzzing
quickcheck = { version = "0.4.1", default-features = false }
rand = "0.3.15"

# HPACK fixtures
hex = "0.2.0"
walkdir = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"

# Akamai example
tokio = "0.1.8"
env_logger = { version = "0.5.3", default-features = false }
rustls = "0.12"
tokio-rustls = "0.5.0"
webpki = "0.18"
webpki-roots = "0.14"
