[package]
name = "h2"
# When releasing to crates.io:
# - Update doc URL.
#   - html_root_url.
# - Update CHANGELOG.md.
# - Create git tag
version = "0.2.6"
license = "MIT"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = "An HTTP/2.0 client and server"
documentation = "https://docs.rs/h2/0.2.6/h2/"
repository = "https://github.com/hyperium/h2"
readme = "README.md"
keywords = ["http", "async", "non-blocking"]
categories = ["asynchronous", "web-programming", "network-programming"]
exclude = ["fixtures/**", "ci/**"]
edition = "2018"

[features]
# Enables `futures::Stream` implementations for various types.
stream = []

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []

[workspace]
members = [
    "tests/h2-fuzz",
    "tests/h2-tests",
    "tests/h2-support",
    "util/genfixture",
    "util/genhuff",
]

[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
tokio-util = { version = "0.4.0", features = ["codec"] }
tokio = { version = "0.3", features = ["io-util"] }
bytes = "0.5.2"
http = "0.2"
tracing = { version = "0.1.13", default-features = false, features = ["std", "log"] }
tracing-futures = { version = "0.2", default-features = false, features = ["std-future"]}
fnv = "1.0.5"
slab = "0.4.2"
indexmap = "1.0"

[dev-dependencies]

# Fuzzing
quickcheck = { version = "0.4.1", default-features = false }
rand = "0.3.15"

# HPACK fixtures
hex = "0.2.0"
walkdir = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"

# Examples
tokio = { version = "0.3", features = ["rt-multi-thread", "macros", "sync", "net"] }
env_logger = { version = "0.5.3", default-features = false }
rustls = "0.18"
tokio-rustls = "0.20.0"
webpki = "0.21"
webpki-roots = "0.17"
