[package]
name = "h2-fuzz"
version = "0.0.0"
publish = false
license = "MIT"
edition = "2018"

[dependencies]
h2 = { path = "../.." }

env_logger = { version = "0.5.3", default-features = false }
futures = { version = "0.3", default-features = false }
honggfuzz = "0.5"
http = { git = "https://github.com/hyperium/http" } #"0.1.3"
tokio = { version = "0.2", features = [] }
