[package]
name = "h2-support"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

[dependencies]
h2 = { path = "../..", features = ["unstable-stream", "unstable"] }

bytes = "0.4.7"
env_logger = "0.5.9"
futures-preview = "=0.3.0-alpha.18"
http = "0.1.5"
string = "0.2"
tokio = "=0.2.0-alpha.5"
