[package]
name = "h2-support"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

[dependencies]
h2 = { path = "../..", features = ["unstable-stream", "unstable"] }

bytes = "0.5"
env_logger = "0.5.9"
futures = { version = "0.3", default-features = false }
http = "0.2"
tokio = { version = "0.2", features = ["time"] }
tokio-test = "0.2"
