[package]
name = "h2-tests"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false
edition = "2018"

[dependencies]

[dev-dependencies]
h2-support = { path = "../h2-support" }
log = "0.4.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "0.2", features = ["macros", "tcp"] }
